[package]
name = "tokio-proxy"
description = "Tokio-based proxy server"
version = "0.1.0"
authors = ["onurzdg"]
edition = "2018"

[dependencies]
async-trait = "0.1.48"
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
bytes = "1.0.1"
log = "0.4.14"
log4rs = "1.0.0"
httparse = "1.3.5"
futures = "0.3.13"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
uuid = { version = "0.8", features = ["v4"] }